app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: spring-docker-hello
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: spring-docker-hello
    app.kubernetes.io/name: spring-docker-hello
    app.kubernetes.io/part-of: spring-docker-hello
    app.openshift.io/runtime: java
  name: spring-docker-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-docker-hello
  template:
    metadata:
      labels:
        app: spring-docker-hello
    spec:
      containers:
      - name: spring-docker-hello
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/argocd-user/spring-docker-hello:latest
        ports:
        - containerPort: 8080
          protocol: TCP
