app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-docker-hello
  name: spring-docker-hello
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-docker-hello
  sessionAffinity: None
  type: ClusterIP
